--- a/src/Components/Style/StyleImg.css
+++ b/src/Components/Style/StyleImg.css
@@ -2,7 +2,7 @@
 
 .product-image {
     width: 100%; /* Asegura que la imagen ocupe todo el ancho del contenedor */
-    height: 200px; /* Establece una altura fija para la imagen */
+    height: 200%; /* Establece una altura fija para la imagen */
     object-fit: contain; /* Cubre el área del contenedor sin distorsionar la imagen */
     border-radius: 0.5rem; /* Bordes redondeados */
 }
@@ -12,4 +12,9 @@
     display: flex;
     flex-direction: column; /* Asegura que los elementos se apilen verticalmente */
     justify-content: space-between; /* Espacio entre los elementos */
+    transition: transform 0.3s ease; /* Transición suave para la ampliación */
+}
+
+.product-card:hover {
+    transform: scale(1.05); /* Aumenta el tamaño de la tarjeta al pasar el cursor */
 }
